# Programacion_Competitiva

./: training_camp.txt
CODEFORCE 1/: CMakeLists.txt  main.cpp  problem_2.cpp
CODEFORCE 898/: CMakeLists.txt  problemE.cpp
CSES/Introduction_Problems/: CMakeLists.txt  main.cpp  p2.cpp  p3.cpp
CSES/Introduction_Problems/src/: p4.cpp  p5.cpp  p6.cpp
CSES2/Introduction/: borrador.cpp  borrador2.cpp  p4.cpp  p4_sol2.cpp  p5.cpp  p5_sol2.cpp
Codeforces Round 878 (Div. 3)/: CMakeLists.txt  p1A.cpp
Codeforces Round 894 (Div. 3)/: CMakeLists.txt  main.cpp
Codeforces Round 895 (Div. 3)/: CMakeLists.txt  p1A.cpp  p2b.cpp  p3b.cpp  p4d.cpp
Codeforces Round 900 (Div. 3)/: CMakeLists.txt  pA.cpp  pD.cpp
Harbour.Space Scholarship Contest 2023-2024 (Div. 1 + Div. 2)/: CMakeLists.txt  main.cpp  problem_A.cpp
LEETCODE/problem_1903/: CMakeLists.txt  main.cpp
LEETCODE/problem_2225/: CMakeLists.txt  example.cpp  main.cpp
P1/: CMakeLists.txt  PROBLEM_INSERTDIGIT.cpp  Perfectly_Fine.cpp  THE_LAKES.cpp  blank_space.cpp  gold_rush.cpp  problem love story.cpp
Pinely Round 2/: Bp2.cpp  CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt  P1.cpp  main.cpp  recursividad.cpp
