cmake_minimum_required(VERSION 3.25)
project(P1)

set(CMAKE_CXX_STANDARD 20)

add_executable(P1 main.cpp)
add_executable(p11 PROBLEM_INSERTDIGIT.cpp)
add_executable(love "problem love story.cpp")
add_executable(blank blank_space.cpp)
add_executable(perfectly Perfectly_Fine.cpp)
add_executable(gold gold_rush.cpp)
add_executable(lakes THE_LAKES.cpp)